# mtrack

./: .gitignore  .gitmodules  CMakeLists.txt
common/: Emitter.h  Indexer.h  Limits.h  MmapTracker.h  RecordType.h  Version.h
graph/: .eslintrc  CMakeLists.txt  index.html  index.html.in  package-lock.json  package.json  package.json.in  rollup.config.js.in  rollup.config.ts  rollup.config.ts.in  tsconfig.json  tsconfig.json.in
graph/scripts/: embed-data.js
graph/src/: Allocation.ts  Assert.ts  Data.ts  Frame.ts  Graph-template.js  Graph-template.ts  Malloc.ts  Mmap.ts  Model.ts  Model2.ts  ModelOptions.ts  PageFault.ts  PageFault2.ts  ParseResult.ts  Range.ts  Snapshot.ts  Stack.ts  Until.ts  index.html  index.js  rollup.config.ts  webpage.ts
model/: IntersectionType.ts  Malloc.js  Mmap.js  Model.js  Model.ts  PageFault.js  Printer.js  Printer.ts  Range.js  Ranges.js  Snapshot.js  Stack.js  Stack.ts  index.js  index.ts  package.json  tsconfig.json
parser/: Address.h  Args.h  CMakeLists.txt  Creatable.h  FileEmitter.cpp  FileEmitter.h  Indexer.h  Logger.cpp  Logger.h  Module.cpp  Module.h  Parser.cpp  Parser.h  ResolverThread.cpp  ResolverThread.h  StringIndexer.cpp  StringIndexer.h  base64.c  base64.h  main.cpp
preload/: CMakeLists.txt  Emitter.h  Hooks.cpp  Indexer.h  Mmap.cpp  MmapTracker.h  Module.cpp  Module.h  PipeEmitter.h  Preload.cpp  Preload.h  Recorder.cpp  Recorder.h  Spinlock.h  Stack.cpp  Stack.h  StackWalker.h  Stack_x86_64.S  Types.h  Waiter.h
samples/: CMakeLists.txt
samples/malloc/: CMakeLists.txt  MallocSample.cpp
samples/mmap/: CMakeLists.txt  MmapSample.cpp
samples/tracker/: CMakeLists.txt  Tracker.cpp
samples/wasm/: CMakeLists.txt  MallocSample.cpp
scripts/: bundle-data.js  package.json
visualizer/: CMakeLists.txt  index.html.in  package.json.in  rollup.config.js.in  tsconfig.json.in  yarn.lock.in
visualizer/src/: Frame.ts  Graph.ts  Model.ts  Model2.ts  webpage.ts
visualizer/src/cli/: cli.ts
visualizer/src/graph/: Graph.ts  webpage.ts
visualizer/src/model/: Model.ts  RecordType.ts
wasm/: CMakeLists.txt  HostEmitter.h  NoHook.h  Stack.cpp  Stack.h  Wasm.cpp  dlmalloc.c  library_mtrack.js
